[project]
name = "bolster"
version = "0.4.0"
description = "Bolster's Brain, you've been warned"
authors = [
    {name = "Andrew Bolster", email = "andrew.bolster@gmail.com"},
]
readme = "README.md"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

keywords = [
    "bolster",
    "api",
    "data science",
    "data",
    "data engineering",
    "data analysis",
    "data pipeline",
    "data processing",
    "data wrangling",
    "data transformation",
    "cli",
    "command line interface",
    "python",
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "boto3>=1.37.37",
    "bs4>=0.0.2",
    "click>=8.1.8",
    "click-log>=0.4.0",
    "dateparser>=1.2.1",
    "feedparser>=6.0.12",
    "lxml>=5.3.2",
    "numpy>=1.25.0,<2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.10",
    "pytest-cov>=5.0.0",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "rich>=14.2.0",
    "scipy>=1.10.1",
    "tqdm>=4.67.1",
    "waybackpy>=3.0.6",
    "xlrd>=2.0.1",
]

[project.urls]
Homepage = "https://github.com/andrewbolster/bolster"
Documentation = "https://bolster.readthedocs.io"
Repository = "https://github.com/andrewbolster/bolster.git"
"Bug Tracker" = "https://github.com/andrewbolster/bolster/issues"

[project.scripts]
bolster = "bolster.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "src/bolster/__init__.py" }

[tool.pdm.build]
excludes = ["tests", "docs", "notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests","src"]
pythonpath = "src"
addopts = [
    "--cov=bolster",
    "--cov-report=term-missing",
    "--import-mode=importlib",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--ignore=notebooks"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests requiring network access (deselect with '-m \"not network\"')"
]

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = ["E402", "F401", "F811", "I001", "F403", "F405", "E741"]

[tool.coverage.run]
source = ["bolster"]
# Exclude test files from coverage measurement
omit = [
    "tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    # Advanced exclusions for common Python patterns
    "raise AssertionError",
    "raise ValueError.*unreachable",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
    "except ImportError:",
    "if sys.platform.*:",
    "if os.name.*:",
]

# Additional exclusion patterns
skip_covered = true
show_missing = true
precision = 2

[tool.bumpversion]
current_version = "0.4.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "ipykernel",
    "httpx",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "nbmake"
]
docs = [
    "Sphinx>=7.0",
    "sphinx-click>=6.0",
    "sphinx-issues>=4.0",
    "nbsphinx>=0.9",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-autoapi>=3.0",
    "sphinx-github-changelog>=1.4",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]
